--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
   },
   "scripts": {
     "webpack": "webpack --mode production",
-    "vscode:prepublish": "npm run webpack"
+    "vscode:prepublish": "npm run webpack",
+    "compile": "tsc -jp ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
