--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "sql-formatter": "^12.1.3"
+    "@sqltools/formatter": "^1.2.5"
   }
 }
