--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "SQL in Python Highlighter/Formatter",
   "description": "",
   "icon": "images/pythonsql.png",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "publisher": "jerrdeh",
   "engines": {
     "vscode": "^1.76.0"
@@ -46,8 +46,7 @@
     "compile": "tsc -jp ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "lint": "eslint src --ext ts"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
